<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">
        <TextView
            android:id="@+id/textView"
            android:textSize="@dimen/tm"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/mup"
            android:layout_marginBottom="@dimen/mup"
            app:fontFamily="sans-serif-thin"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name" />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scroll"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_marginRight="@dimen/mup"
            android:layout_marginLeft="@dimen/mup"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/mup"
            android:text="@string/descripcio" />
    </ScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">
        <Button
            android:id="@+id/ajuda"
            android:layout_centerHorizontal="true"
            android:onClick="tornarPrincipal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tornar" />
    </RelativeLayout>
</LinearLayout>