<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/textView"
        android:textSize="@dimen/tm"
        android:layout_marginTop="@dimen/mup"
        android:layout_marginBottom="@dimen/mup"
        app:fontFamily="sans-serif-thin"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/alias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mupm"
                android:layout_marginBottom="@dimen/mupm">

                <ImageView
                    android:id="@+id/user"
                    android:layout_width="@dimen/p"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/mup"
                    app:srcCompat="@drawable/alias" />

                <EditText
                    android:id="@+id/aliasc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="@integer/ems"
                    android:hint="@string/alias"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <TextView
                android:id="@+id/mida"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mupm"
                android:layout_marginBottom="@dimen/mupm"
                android:gravity="center"
                android:text="@string/midagraella"
                app:fontFamily="sans-serif-thin" />

            <SeekBar
                android:id="@+id/sb"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:defaultValue="0"
                android:max="2"
                android:progress="7" />

            <LinearLayout
                android:id="@+id/checkBoxl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mupm"
                android:layout_marginBottom="@dimen/mupm">

                <ImageView
                    android:id="@+id/tim"
                    android:layout_width="@dimen/p"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/timer" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/controldetemps" />

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/tes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/mupm"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/configt"
                    android:visibility="invisible"
                    app:fontFamily="sans-serif-thin" />

                <NumberPicker
                    android:id="@+id/numberpicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/mupm"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_weight="0">
        <Button
            android:id="@+id/comencar"
            android:layout_width="wrap_content"
            android:onClick="comencar"
            android:layout_height="wrap_content"
            android:text="@string/comencar" />
    </LinearLayout>
</LinearLayout>